<b>Version 1.15</b>:<br>
- [OPTIMIERUNG] Optimierung der Suchfunktion<br><br>
<b>Version 1.14</b>:<br>
- [INTERFACE] Platzhalterhintergrund bewegt sich nun mit der Scrollposition<br><br>
<b>Version 1.13</b>:<br>
- [BUGFIX] Inhalte im selben Ordner wie das Suchresultat ergaben einen Fehler, wenn der Ordner zuvor noch nie geöffnet wurde<br><br>
<b>Version 1.12</b>:<br>
- [FEATURE] Suchfunktion (Bekannter Bug: Inhalte im selben Ordner wie das Suchresultat ergeben einen Fehler, wenn der Ordner zuvor noch nie geöffnet wurde.)<br><br>
<b>Version 1.11</b>:<br>
- [INTERFACE] Dunklere Farbpalette.<br>
- [INTERFACE] Aktuell geöffneter Inhalt wird farblich im Menü hervorgehoben.<br>
- [INTERFACE] Höherliegende Menüs können während dem Abspielen von Inhalten auf- und zugeklappt werden<br><br>
<b>Version 1.101</b>:<br>
- [HOTFIX] Fehler bei Buttondarstellung bei fortsetzbaren Medieninhalten<br><br>
<b>Version 1.10</b>:<br>
- [INTERFACE] Vorschaubild bei fortsetzbaren Medieninhalten<br><br>
<b>Version 1.09</b>:<br>
- [INTERFACE] Visuelle Anzeige, wenn ein Videozeitstempel zurückgesetzt wird (95%).<br>
- [INTERFACE] Bei Mediananzeige wird nun das Übergeordnete Menü angezeigt<br><br>
<b>Version 1.08</b>:<br>
- [BUGFIX] Fehlender Stern bei Favoriten<br><br>
<b>Version 1.07</b>:<br>
- [BUGFIX] Fehlerkorrektur bei Dateinamen<br><br>
<b>Version 1.06</b>:<br>
- [BUGFIX] Leere Playliste führte zu fehlerhaftem Laden<br><br>
<b>Version 1.05</b>:<br>
- [BUGFIX] Korrektur Schönheitsfehler bei Changelog<br><br>
<b>Version 1.04</b>:<br>
- [FEATURE] Anzeige des Change-Logs<br>
- [FEATURE] Fortsetzen von bis zu 5 Titeln<br>
- [BUGFIX] Korrektur Schönheitsfehler<br><br>
<b>Version 1.03</b>:<br>
- [BUGFIX] Korrektur Inhaltsimplementierungen<br><br>
<b>Version 1.02</b>:<br>
- [INTERFACE] Hover-Effekt auf Schwarz geändert<br><br>